   * Updated Czech language file - thx Trottel
   * Many settings now remembered from "Export to image based format"
   * Dropping a video file on empty waveform will now start extraction of waveform - thx Leon
   * Better reading of SCC files
   * Better handling of apostrophe in spell check - thx Betsy25
   * Better grouping of general settings in options
* FIXED:
  * Waveform/spectrogram: Moving start/end with ALT down now always works - thx Leon
  * Waveform/spectrogram: Move border left/right now also always works even 
    when it's near next/prev border
  * Fixed transparent background in "OCR window" regarding transport streams
  * Now Viewnamese language actually shows in the "Choose language" dialog
  * Timed Text - List view context menu "Set language" had wrong text
  * Subtitle preview can now show both font and italic for same text - thx Drago
  * Fixed bug decoding dvb sub - thx aMvEL
  * Fixed possible crash in OCR window (if no language is available)
  * "OCR window" - Norweigan bokmål now works as spell check language
  * Disabled saving of empty files
  * Fixed bug in centering of exported images - thx minhjirachi
  * Fixed crash in Spell check - Get dictionaries (if no internet connection) - thx Krystian
  * Fixed (sometimes) missing highlighting of word in spell check dialog - thx Betsy25
  * Fixed bug where textbox lost connection with subtitle after "Replace" - thx HodoreeSubs
  * Fixed issue in OCR regarding expand selection - thx Thomas
  * Reset loaded image compare bitmaps after creating new ocr image set


3.3.12 (12th January 2014)
* NEW:
   * Added initial support for importing DVB subtitles from transport streams
   * Added "File -> Import images"
   * Added "Tools -> Merge lines with same text"
   * Importing from plain text file,  "One line is one subtitle" now has a 
     "Line break" option - thx Adrian   
   * Added xml subtitle format "FLVCoreCuePoints" - thx Jon
   * Added some support for fxpxml 1.3