@@ -1,0 +1,227 @@
+﻿using System;
+using System.Collections.Generic;
+using System.Text;
+using System.Xml;
+
+namespace Nikse.SubtitleEdit.Logic.SubtitleFormats
+{
+    public class OresmeDocXDocument : SubtitleFormat
+    {
+        public override string Extension
+        {
+            get { return ".xml"; }
+        }
+
+        public override string Name
+        {
+            get { return "Oresme Docx document"; }
+        }
+
+        public override bool IsTimeBased
+        {
+            get { return true; }
+        }
+
+        public override bool IsMine(List<string> lines, string fileName)
+        {
+            var sb = new StringBuilder();
+            lines.ForEach(line => sb.AppendLine(line));
+            string xmlAsString = sb.ToString().Trim();
+            if ((xmlAsString.Contains("<w:tc>")))
+            {
+                var subtitle = new Subtitle();
+                LoadSubtitle(subtitle, lines, fileName);
+                return subtitle.Paragraphs.Count > _errorCount;
+            }
+            return false;
+        }
+
+        private string Layout = @"<?xml version='1.0' encoding='UTF-8' standalone='yes'?>
+<w:document xmlns:wpc='http://schemas.microsoft.com/office/word/2010/wordprocessingCanvas' xmlns:mc='http://schemas.openxmlformats.org/markup-compatibility/2006' xmlns:o='urn:schemas-microsoft-com:office:office' xmlns:r='http://schemas.openxmlformats.org/officeDocument/2006/relationships' xmlns:m='http://schemas.openxmlformats.org/officeDocument/2006/math' xmlns:v='urn:schemas-microsoft-com:vml' xmlns:wp14='http://schemas.microsoft.com/office/word/2010/wordprocessingDrawing' xmlns:wp='http://schemas.openxmlformats.org/drawingml/2006/wordprocessingDrawing' xmlns:w10='urn:schemas-microsoft-com:office:word' xmlns:w='http://schemas.openxmlformats.org/wordprocessingml/2006/main' xmlns:w14='http://schemas.microsoft.com/office/word/2010/wordml' xmlns:wpg='http://schemas.microsoft.com/office/word/2010/wordprocessingGroup' xmlns:wpi='http://schemas.microsoft.com/office/word/2010/wordprocessingInk' xmlns:wne='http://schemas.microsoft.com/office/word/2006/wordml' xmlns:wps='http://schemas.microsoft.com/office/word/2010/wordprocessingShape' mc:Ignorable='w14 wp14'>
+  <w:body>
+    <w:tbl>
+      <w:tblPr>
+        <w:tblW w:w='0' w:type='auto'/>
+        <w:tblBorders>
+          <w:top w:val='single' w:sz='4' w:space='0' w:color='FFCC00'/>
+          <w:left w:val='single' w:sz='4' w:space='0' w:color='FFCC00'/>
+          <w:bottom w:val='single' w:sz='4' w:space='0' w:color='FFCC00'/>
+          <w:right w:val='single' w:sz='4' w:space='0' w:color='FFCC00'/>
+          <w:insideH w:val='single' w:sz='4' w:space='0' w:color='FFCC00'/>
+          <w:insideV w:val='single' w:sz='4' w:space='0' w:color='FFCC00'/>
+        </w:tblBorders>
+        <w:tblLayout w:type='fixed'/>
+        <w:tblCellMar>
+          <w:left w:w='70' w:type='dxa'/>
+          <w:right w:w='70' w:type='dxa'/>
+        </w:tblCellMar>
+        <w:tblLook w:val='0000' w:firstRow='0' w:lastRow='0' w:firstColumn='0' w:lastColumn='0' w:noHBand='0' w:noVBand='0'/>
+      </w:tblPr>
+      <w:tblGrid>
+        <w:gridCol w:w='1240'/>
+        <w:gridCol w:w='5560'/>
+      </w:tblGrid>
+    </w:tbl>
+    <w:p w:rsidR='00D56C9E' w:rsidRDefault='00D56C9E'/>
+    <w:sectPr w:rsidR='00D56C9E'>
+      <w:pgSz w:w='12240' w:h='15840'/>
+      <w:pgMar w:top='1440' w:right='1440' w:bottom='1440' w:left='1440' w:header='720' w:footer='720' w:gutter='0'/>
+      <w:cols w:space='720'/>
+    </w:sectPr>
+  </w:body>
+</w:document>";
+
+        private string LayoutParagraph = @"<w:tr w:rsidR='00D56C9E' w:rsidTr='002E456A'>
+        <w:tc>
+          <w:tcPr>
+            <w:tcW w:w='1240' w:type='dxa'/>
+          </w:tcPr>
+          <w:p w:rsidR='00D56C9E' w:rsidRDefault='00D56C9E'>
+            <w:pPr>
+              <w:pStyle w:val='TimeCode'/>
+            </w:pPr>
+            <w:r>
+              <w:t>[TIMECODE]</w:t>
+            </w:r>
+          </w:p>
+        </w:tc>
+        <w:tc>
+          <w:tcPr>
+            <w:tcW w:w='5560' w:type='dxa'/>
+            <w:vAlign w:val='bottom'/>
+          </w:tcPr>
+          <w:p w:rsidR='00D56C9E' w:rsidRDefault='00D56C9E'>
+            <w:pPr>
+              <w:pStyle w:val='PopOn'/>
+            </w:pPr>
+            <w:proofErr w:type='spellStart'/>
+          </w:p>
+        </w:tc>
+      </w:tr>";
+
+        private string LayoutParagraph2 = @"<w:tr w:rsidR='00D56C9E' w:rsidTr='002E456A'>
+        <w:tc>
+          <w:tcPr>
+            <w:tcW w:w='1240' w:type='dxa'/>
+          </w:tcPr>
+          <w:p w:rsidR='00D56C9E' w:rsidRDefault='00D56C9E'>
+            <w:pPr>
+              <w:pStyle w:val='TimeCode'/>
+            </w:pPr>
+            <w:r>
+              <w:t>[TIMECODE]</w:t>
+            </w:r>
+          </w:p>
+        </w:tc>
+        <w:tc>
+          <w:tcPr>
+            <w:tcW w:w='5560' w:type='dxa'/>
+            <w:vAlign w:val='bottom'/>
+          </w:tcPr>
+          <w:p w:rsidR='00D56C9E' w:rsidRDefault='00D56C9E'>
+            <w:pPr>
+              <w:pStyle w:val='PopOn'/>
+            </w:pPr>
+            <w:proofErr w:type='spellStart'/>
+          </w:p>
+        </w:tc>
+      </w:tr>";
+
+        public override string ToText(Subtitle subtitle, string title)
+        {
+            string xmlStructure = Layout.Replace("'", "\"");
+
+            var xml = new XmlDocument();
+            xml.LoadXml(xmlStructure);
+            var nsmgr = new XmlNamespaceManager(xml.NameTable);
+            nsmgr.AddNamespace("w", "http://schemas.openxmlformats.org/wordprocessingml/2006/main");
+            XmlNode div = xml.DocumentElement.SelectSingleNode("w:body/w:tbl", nsmgr);
+            int no = 0;
+            foreach (Paragraph p in subtitle.Paragraphs)
+            {
+                XmlNode paragraph = xml.CreateElement("w:tr", "http://schemas.openxmlformats.org/wordprocessingml/2006/main");
+                paragraph.InnerXml = LayoutParagraph.Replace("'", "\"").Replace("w:", string.Empty).Replace("[TIMECODE]", ToTimeCode(p.StartTime));
+
+                string text = Utilities.RemoveHtmlTags(p.Text);
+                //paragraph.InnerText = text;
+
+                div.AppendChild(paragraph);
+                no++;
+            }
+
+            string s = ToUtf8XmlString(xml);
+            return s;
+        }
+
+        private string ToTimeCode(TimeCode timeCode)
+        {
+            return timeCode.ToHHMMSSFF(); //10:00:07:27
+        }
+
+        public override void LoadSubtitle(Subtitle subtitle, List<string> lines, string fileName)
+        {        
+            _errorCount = 0;
+            var sb = new StringBuilder();
+            lines.ForEach(line => sb.AppendLine(line));
+            var xml = new XmlDocument();
+            xml.LoadXml(sb.ToString().Trim());
+            var nsmgr = new XmlNamespaceManager(xml.NameTable);
+            nsmgr.AddNamespace("w", "http://schemas.openxmlformats.org/wordprocessingml/2006/main");
+            foreach (XmlNode node in xml.DocumentElement.SelectNodes("//w:tr", nsmgr))
+            {
+                try
+                {
+                    Paragraph p = new Paragraph();
+                    XmlNode t = node.SelectSingleNode("w:tc/w:p/w:r/w:t", nsmgr);
+                    if (t != null)
+                    {
+                        p.StartTime = GetTimeCode(t.InnerText);
+                        sb = new StringBuilder();
+                        foreach (XmlNode wrNode in node.SelectNodes("w:tc/w:p/w:r", nsmgr))
+                        {
+                            foreach (XmlNode child in wrNode.ChildNodes)
+                            {
+                                if (child.Name == "w:t")
+                                {
+                                    bool isTimeCode = child.InnerText.Length == 11 && child.InnerText.Replace(":", string.Empty).Length == 8;
+                                    if (!isTimeCode)
+                                        sb.Append(child.InnerText);
+                                }
+                                else if (child.Name == "w:br")
+                                {
+                                    sb.AppendLine();
+                                }
+                            }
+                        }
+                        p.Text = sb.ToString();
+                        subtitle.Paragraphs.Add(p);
+                    }
+                }
+                catch (Exception ex)
+                {
+                    System.Diagnostics.Debug.WriteLine(ex.Message);
+                    _errorCount++;
+                }
+            }
+            for (int i = 0; i < subtitle.Paragraphs.Count-1; i++)
+            {
+                subtitle.Paragraphs[i].EndTime.TotalMilliseconds = subtitle.Paragraphs[i + 1].StartTime.TotalMilliseconds;
+            }
+            subtitle.Paragraphs[subtitle.Paragraphs.Count - 1].EndTime.TotalMilliseconds = 2500;
+            subtitle.RemoveEmptyLines();
+            for (int i = 0; i < subtitle.Paragraphs.Count - 1; i++)
+            {
+                if (subtitle.Paragraphs[i].EndTime.TotalMilliseconds == subtitle.Paragraphs[i + 1].StartTime.TotalMilliseconds)
+                    subtitle.Paragraphs[i].EndTime.TotalMilliseconds = subtitle.Paragraphs[i + 1].StartTime.TotalMilliseconds - 1;
+            }
+            subtitle.Renumber(1);
+        }
+
+        private static TimeCode GetTimeCode(string s)
+        {
+            var parts = s.Trim().Split(':');
+            return new TimeCode(int.Parse(parts[0]), int.Parse(parts[1]), int.Parse(parts[2]), FramesToMillisecondsMax999(int.Parse(parts[3])));
+        }
+
+    }
+}
