@@ -23,6 +23,7 @@
    * Better reading of SCC files
    * Better handling of apostrophe in spell check - thx Betsy25
    * Better grouping of general settings in options
+   * Added setting for html encoding text in SAMI files (default on)
 * FIXED:
   * Waveform/spectrogram: Moving start/end with ALT down now always works - thx Leon
   * Waveform/spectrogram: Move border left/right now also always works even 
@@ -41,6 +42,7 @@
   * Fixed bug where textbox lost connection with subtitle after "Replace" - thx HodoreeSubs
   * Fixed issue in OCR regarding expand selection - thx Thomas
   * Reset loaded image compare bitmaps after creating new ocr image set
+  * Freeze fix for subtitle format "spt" - thx Leif
 
 
 3.3.12 (12th January 2014)
